--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "smoke:core": "node scripts/smoke-core.mjs",
     "preview": "vite preview",
     "tauri": "tauri",
     "backend": "node backend/server.js",
@@ -20,10 +23,14 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.3.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.1.0",
-    "vite": "^6.1.0"
+    "jsdom": "^28.0.0",
+    "vite": "^6.1.0",
+    "vitest": "^4.0.18"
   }
 }
