--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "smoke:core": "node scripts/smoke-core.mjs",
+    "verify": "npm test && npm run build && SMOKE_MOCK=1 BACKEND_PORT=18081 npm run smoke:core",
     "preview": "vite preview",
     "tauri": "tauri",
     "backend": "node backend/server.js",
