chore: add ci status check command

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:watch": "vitest",
     "smoke:core": "node scripts/smoke-core.mjs",
     "verify": "npm test && npm run build && SMOKE_MOCK=1 BACKEND_PORT=18081 npm run smoke:core",
+    "ci:status": "node scripts/check-ci.mjs",
     "preview": "vite preview",
     "tauri": "tauri",
     "backend": "node backend/server.js",
