test: add coverage reporting and ci verify pipeline

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "smoke:core": "node scripts/smoke-core.mjs",
     "verify": "npm test && npm run build && SMOKE_MOCK=1 BACKEND_PORT=18081 npm run smoke:core",
@@ -30,6 +31,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^4.0.18",
     "concurrently": "^9.1.0",
     "jsdom": "^28.0.0",
     "vite": "^6.1.0",
