--- a/.github/workflows/desktop-ci.yml
+++ b/.github/workflows/desktop-ci.yml
@@ -23,10 +23,18 @@ jobs:
         run: npm ci
 
       - name: Verify
-        run: npm run verify
+        run: SMOKE_OUTPUT=artifacts/smoke-core-summary.json npm run verify
 
       - name: Test Coverage
         run: npm run test:coverage
+
+      - name: Upload Smoke Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: smoke-core-summary
+          path: artifacts/smoke-core-summary.json
+          if-no-files-found: warn
 
       - name: Upload Coverage Artifact
         uses: actions/upload-artifact@v4
